src/snapshots/spec__parser__tests__date_type.snap
---
source: src/parser.rs
expression: document
---
Document {
    schemas: [
        Schema {
            identifier: "Date",
            definition: Actual(
                Primitive(
                    Primitive {
                        kind: String,
                        format: Some(
                            String(
                                Date,
                            ),
                        ),
                        constraints: [],
                    },
                ),
            ),
        },
    ],
    apis: [],
}
